Connect User routes and add User Api Docs
